# py-scriptor

./: README.md  __init__.py  pyproject.toml  scriptor.py  scriptorIDE.py
.github/workflows/: pypi.yml
py_scriptor/: __init__.py  pyproject.toml  scriptorIDE.py
